fixed random issue with pearl and sapphire smelting into urotark.  still not sure why they did that in the first place

--- a/Resources/assets/handofomega/lang/en_US.lang
+++ b/Resources/assets/handofomega/lang/en_US.lang
@@ -7,7 +7,7 @@ tile.urotarkore.second.name=Pearl Ore
 tile.urotarkblock.third.name=Sapphire Block
 tile.urotarkore.third.name=Sapphire Ore
 // meta set 2
-tile.muscoviteblock.first.name=Mucscovite Block
+tile.muscoviteblock.first.name=Muscovite Block
 tile.muscoviteore.first.name=Muscovite Ore
 tile.muscoviteblock.second.name=Ruby Block
 tile.muscoviteore.second.name=Ruby Ore
